// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiColumn rendering renders expected elements 1`] = `
<div
  className="MultiColumn"
  id="random-id"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="group"
>
  <div
    aria-label="Column 1 of 2"
    className="MultiColumn__column"
    data-index={0}
    role="listbox"
    style={
      {
        "width": "12em",
      }
    }
    tabIndex={-1}
  >
    <div
      aria-label="item00, column 1, group"
      aria-selected={true}
      className="MultiColumn__item"
      data-index={0}
      id="random-id-0-0"
      role="option"
      tabIndex={0}
    >
      <div
        className="MultiColumn__text"
      >
        item00
      </div>
      <SvgIcon
        className="MultiColumn__arrow"
        icon={
          {
            "icon": [],
            "iconName": "caret-right",
            "prefix": "fas",
          }
        }
      />
    </div>
    <div
      aria-label="item01, column 1, leaf"
      aria-selected={false}
      className="MultiColumn__item"
      data-index={1}
      id="random-id-0-1"
      role="option"
      tabIndex={-1}
    >
      <div
        className="MultiColumn__text"
      >
        item01
      </div>
    </div>
  </div>
  <div
    aria-label="Column 2 of 2"
    className="MultiColumn__column"
    data-index={1}
    role="listbox"
    style={
      {
        "width": "12em",
      }
    }
    tabIndex={-1}
  >
    <Spinner
      aria-hidden={true}
      aria-label="Loading"
      role="status"
      size="tiny"
    />
  </div>
  <div
    aria-live="polite"
    className="assistive-text"
  />
</div>
`;

exports[`MultiColumn rendering renders expected elements when focused is true 1`] = `
<div
  className="MultiColumn"
  id="random-id"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="group"
>
  <div
    aria-label="Column 1 of 2"
    className="MultiColumn__column"
    data-index={0}
    role="listbox"
    style={
      {
        "width": "12em",
      }
    }
    tabIndex={-1}
  >
    <div
      aria-label="item00, column 1, group"
      aria-selected={true}
      className="MultiColumn__item"
      data-index={0}
      id="random-id-0-0"
      role="option"
      tabIndex={0}
    >
      <div
        className="MultiColumn__text"
      >
        item00
      </div>
      <SvgIcon
        className="MultiColumn__arrow"
        icon={
          {
            "icon": [],
            "iconName": "caret-right",
            "prefix": "fas",
          }
        }
      />
    </div>
  </div>
  <div
    aria-label="Column 2 of 2"
    className="MultiColumn__column"
    data-index={1}
    role="listbox"
    style={
      {
        "width": "12em",
      }
    }
    tabIndex={-1}
  >
    <Spinner
      aria-hidden={true}
      aria-label="Loading"
      role="status"
      size="tiny"
    />
  </div>
  <div
    aria-live="polite"
    className="assistive-text"
  />
</div>
`;

exports[`MultiColumn rendering renders expected elements when optional properties are set 1`] = `
<div
  className="MultiColumn TestClass"
  id="random-id"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="group"
>
  <div
    aria-label="Column 1 of 2"
    className="MultiColumn__column"
    data-index={0}
    role="listbox"
    style={
      {
        "width": "12em",
      }
    }
    tabIndex={-1}
  >
    <div
      aria-label="item00, column 1, group"
      aria-selected={true}
      className="MultiColumn__item"
      data-index={0}
      id="random-id-0-0"
      role="option"
      tabIndex={0}
    >
      <div
        className="MultiColumn__text"
      >
        item00
      </div>
      <SvgIcon
        className="MultiColumn__arrow"
        icon={
          {
            "icon": [],
            "iconName": "caret-right",
            "prefix": "fas",
          }
        }
      />
    </div>
  </div>
  <div
    aria-label="Column 2 of 2"
    className="MultiColumn__column"
    data-index={1}
    role="listbox"
    style={
      {
        "width": "12em",
      }
    }
    tabIndex={-1}
  >
    <Spinner
      aria-hidden={true}
      aria-label="Loading"
      role="status"
      size="tiny"
    />
  </div>
  <div
    aria-live="polite"
    className="assistive-text"
  />
</div>
`;

exports[`MultiColumn rendering renders expected elements when path is empty 1`] = `
<div
  className="MultiColumn__empty"
>
  <div>
    Test empty
  </div>
</div>
`;

exports[`MultiColumn rendering renders expected elements when path is empty and className is set 1`] = `
<div
  className="MultiColumn__empty TestClass"
>
  <div>
    Test empty
  </div>
</div>
`;
